--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,36 @@
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
-        "next": "^14.0.4",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "@tanstack/react-query": "^5.17.0",
         "axios": "^1.6.2",
-        "date-fns": "^3.0.6",
-        "recharts": "^2.10.3",
-        "lucide-react": "^0.303.0",
+        "bcryptjs": "^3.0.3",
         "clsx": "^2.0.0",
-        "next-themes": "^0.2.1"
+        "csv-stringify": "^6.6.0",
+        "date-fns": "^3.0.6",
+        "exceljs": "^4.4.0",
+        "jsonwebtoken": "^9.0.3",
+        "lucide-react": "^0.303.0",
+        "mongoose": "^9.1.5",
+        "next": "^14.0.4",
+        "next-themes": "^0.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "recharts": "^2.10.3",
+        "uuid": "^13.0.0",
+        "zod": "^4.3.5"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^3.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^20.10.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
+        "@types/uuid": "^11.0.0",
         "autoprefixer": "^10.4.16",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "^14.0.4",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "typescript": "^5.3.3",
-        "eslint": "^8.56.0",
-        "eslint-config-next": "^14.0.4"
+        "typescript": "^5.3.3"
     }
 }
